bridge/base/0-enterprise-gradeiac-namespace.yaml
#! 0-enterprise-gradeiac-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: enterprise-gradeiac
    labels:
        com.docker.compose.project: enterprise-gradeiac
