bridge/base/nginx-service.yaml
# check if there is at least one published port

#! nginx-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: nginx-published
    namespace: enterprise-gradeiac
    labels:
        com.docker.compose.project: enterprise-gradeiac
        com.docker.compose.service: nginx
spec:
    selector:
        com.docker.compose.project: enterprise-gradeiac
        com.docker.compose.service: nginx
    ports:
        - name: nginx-80
          port: 80
          protocol: TCP
          targetPort: nginx-80
        - name: nginx-443
          port: 443
          protocol: TCP
          targetPort: nginx-443

# check if there is at least one published port
