bridge/base/web-expose.yaml
#! web-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: web
    namespace: enterprise-gradeiac
    labels:
        com.docker.compose.project: enterprise-gradeiac
        com.docker.compose.service: web
spec:
    selector:
        com.docker.compose.project: enterprise-gradeiac
        com.docker.compose.service: web
    ports:
        - name: web-5000
          port: 5000
          targetPort: web-5000
