bridge/base/iac_network-network-policy.yaml
#! iac_network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: iac-network-network-policy
    namespace: enterprise-gradeiac
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.iac_network: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.iac_network: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.iac_network: "true"
